# APTwitchBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
config/: config.example.json  messages.en.json
docs/: INSTALL.md  USAGE.md  state_schema.md
fetcher/: CMakeLists.txt
fetcher/src/: main.cpp
interpreter/: README_INTERPRETER.md  ap_messages.py  ap_permissions.py  ap_state.py  ap_utils.py  bot.py  main.py
interpreter/commands/: __init__.py  about.py  admin_debug.py  flags.py  help_cmd.py  identity.py  keyitems.py  lastitem.py  progress.py  seedinfo.py  team.py
